[gd_scene load_steps=4 format=3 uid="uid://ds0bnjacoj05w"]

[ext_resource type="Script" path="res://source/entity/npc/npc_spawner.gd" id="1_imjjf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a4due"]
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission = Color(0, 0.552941, 0.517647, 1)

[sub_resource type="TextMesh" id="TextMesh_ndtuw"]
material = SubResource("StandardMaterial3D_a4due")
text = "spawn"

[node name="npc_spawner" type="Node3D"]
script = ExtResource("1_imjjf")

[node name="text3d" type="MeshInstance3D" parent="."]
mesh = SubResource("TextMesh_ndtuw")

[node name="spawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="spawnTimer" to="." method="_on_spawn_timer_timeout"]
